<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_attendance"
        android:icon="@drawable/attendance"
        android:title="@string/title_attendance" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/schedule"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_grade"
        android:icon="@drawable/grade"
        android:title="@string/title_grade" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

</menu>
