<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.skripsi.tanti.m_grading.DashboardFragment"
        android:label="@string/title_home"
        tools:layout="@layout/dashboard_fragment" />

    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.skripsi.tanti.m_grading.AttendanceFragment"
        android:label="@string/title_attendance"
        tools:layout="@layout/attendance_fragment" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.skripsi.tanti.m_grading.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/schedule_fragment" />

    <fragment
        android:id="@+id/navigation_grade"
        android:name="com.skripsi.tanti.m_grading.GradeFragment"
        android:label="@string/title_grade"
        tools:layout="@layout/grade_fragment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.skripsi.tanti.m_grading.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />
</navigation>